<resources>
    <string name="app_name">Sistema de control de asistencia y comunicados</string>
    <string name="menu_notification">Comunicados</string>
    <string name="menu_profile">Asistencia</string>
    <string name="image_description">Image</string>

    <!--    login-->
    <string name="login_email">Correo</string>
    <string name="login_btn_login">Iniciar sesion</string>
    <string name="login_password">Contraseña</string>
    <string name="field_requiered">Campo requerido</string>
    <string name="main_btn_create">Publicar</string>

<!--    profile-->
    <string name="profile_btn_present">Asistencia</string>
    <string name="profile_name">Nombre</string>

    <string name="profile_al_title_name">Nombre: </string>
    <string name="profile_msg_empty_name">Agrega tu nombre para poder tomar asistencia</string>

    <string name="profile_input_name">Nombre</string>
    <string name="profile_input_present">PRESENTE</string>
    <string name="profile_input_present_title">Escribe: </string>
    <string name="profile_input_present_title_msg_not_list_finger">No tienes registrado ninguna huella</string>

    <string name="profile_input_present_msg_present">Asistencia confirmada</string>
    <string name="profile_input_present_msg_present_not_present">Asistencia aun no confirmada</string>
    <string name="profile_input_finger_sensor_title">Coloca tu huella para confirmar asistencia</string>
    <string name="profile_input_finger_sensor_negative_cancel">Cancelar</string>

    <string name="profile_input_name_msg_empty">Agrega tu nombre</string>

    <!--    navigation titles-->
    <string name="navigation_title_notifications">Comunicados</string>
    <string name="navigation_title_profile">Perfil</string>


</resources>