<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <TextView
        android:id="@+id/profile_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_iv_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_baseline_create_24"
        app:layout_constraintBottom_toBottomOf="@id/profile_tv_username"
        app:layout_constraintStart_toEndOf="@id/profile_tv_username"
        app:layout_constraintTop_toTopOf="@id/profile_tv_username" />

    <View
        android:id="@+id/profile_x_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/profile_tv_username" />

    <Button
        android:id="@+id/profile_btn_present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/profile_btn_present"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_x_view" />

    <View
        android:id="@+id/profile_x_view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/profile_btn_present" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_rv_present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/profile_x_view_2" />

</androidx.constraintlayout.widget.ConstraintLayout>